<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>
    <string name="app_name">InstagramClone</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="texto_usuario_login">Digite seu Usuário</string>
    <string name="texto_senha_login">Digite a sua Senha</string>
    <string name="text_bt_logar">Logar</string>
    <string name="text_crie_conta">Não tem conta? Crie uma!</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="text_dig_usuario">Digite o seu usuário</string>
    <string name="text_dig_email">Digite o seu e-mail</string>
    <string name="text_dig_senha">Digite o sua senha</string>
    <string name="action_configuracoes">Configurações</string>
    <string name="action_sair">Sair</string>
    <string name="action_compartilhar">Compartilhar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_feed_usuarios">FeedUsuariosActivity</string>
</resources>