<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MainActivity">

    <item
        android:id="@+id/action_configuracoes"
        android:title="@string/action_configuracoes"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sair"
        android:title="@string/action_sair"
        android:orderInCategory="200"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_compartilhar"
        android:title="@string/action_compartilhar"
        android:icon="@drawable/ic_action_camera"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"/>

</menu>