<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_degrade"
    android:layout_gravity="center"
    android:padding="16dp"
    tools:context=".view.CadastroActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="113dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/usuario"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <EditText
        android:id="@+id/text_usuario_cadastro_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/fundo_caixa_texto"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:hint="@string/text_dig_usuario"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.047" />

    <EditText
        android:id="@+id/text_email_cadastro_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/fundo_caixa_texto"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:hint="@string/text_dig_email"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_usuario_cadastro_id"
        app:layout_constraintVertical_bias="0.047" />

    <EditText
        android:id="@+id/text_senha_cadastro_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/fundo_caixa_texto"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:hint="@string/text_dig_senha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email_cadastro_id"
        app:layout_constraintVertical_bias="0.047" />

    <Button
        android:id="@+id/bota_cadastro_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/fundo_botao"
        android:text="@string/btn_cadastrar"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_senha_cadastro_id"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:id="@+id/txt_cadastro_login_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:text="Já tem conta? Faça o login!!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bota_cadastro_id"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>